--- a/HK.html
+++ b/HK.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title> Dress Hello Kitty</title>
 <meta name="viewport" content="width=devise-width, initial-scale=1.0">
-<style src = "HK.Sass">
+<link rel"stylesheet" href= "HK.Sass">
 
 </style>
 
