--- a/HK.html
+++ b/HK.html
@@ -180,7 +180,7 @@
     </div>
     <div class="bows-1row">
     <img class="bows_red" src="http://i64.tinypic.com/2dgrdeg.png" />
-    <img class="bows_yellow" src="http://i66.tinypic.com/2hp69fd.png" />
+    <img class="bows_yellow" src="http://i66.tinypic.com/11w3vk3.png" />
     </div>
     <div class="bows-2row">
     <img class="bows_redCustom" src="http://i66.tinypic.com/2vhypzr.png" />
