--- a/HK.html
+++ b/HK.html
@@ -184,7 +184,7 @@
     </div>
     <div class="bows-2row">
     <img class="bows_redCustom" src="http://i66.tinypic.com/2vhypzr.png" />
-    <img class="bows_pink" src="http://i67.tinypic.com/zk6d5v.png" />
+    <img class="bows_pink" src="http://i68.tinypic.com/zv31vq.png" />
     </div>
 </div>
 
